--- a/api/package.json
+++ b/api/package.json
@@ -1,20 +1,51 @@
 {
-  "name": "api",
+  "name": "cardcounterz-api",
+  "description": "API for the Cardcounterz project",
   "version": "0.0.0",
-  "private": true,
+  "homepage": "",
+  "main": "src",
+  "keywords": [
+    "feathers"
+  ],
+  "author": {
+    "name": "jason",
+    "email": "jasonhellwig@gmail.com"
+  },
+  "contributors": [],
+  "bugs": {},
+  "directories": {
+    "lib": "src",
+    "test": "test/"
+  },
+  "engines": {
+    "node": "^8.0.0",
+    "yarn": ">= 0.18.0"
+  },
   "scripts": {
-    "api": "node_modules/nodemon/bin/nodemon.js bin/www"
+    "test": "yarn run eslint && yarn run mocha",
+    "eslint": "eslint src/. test/. --config .eslintrc.json",
+    "dev": "nodemon src/",
+    "start": "node src/",
+    "mocha": "mocha test/ --recursive --exit"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "dotenv": "^6.0.0",
-    "ejs": "~2.5.7",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "@feathersjs/configuration": "^2.0.3",
+    "@feathersjs/errors": "^3.3.3",
+    "@feathersjs/express": "^1.2.6",
+    "@feathersjs/feathers": "^3.2.2",
+    "@feathersjs/socketio": "^3.2.5",
+    "compression": "^1.7.3",
+    "cors": "^2.8.4",
+    "helmet": "^3.13.0",
+    "serve-favicon": "^2.5.0",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "eslint": "^5.6.0",
+    "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.4",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2"
   }
 }
