--- a/api/package.json
+++ b/api/package.json
@@ -34,9 +34,16 @@
     "@feathersjs/express": "^1.2.6",
     "@feathersjs/feathers": "^3.2.2",
     "@feathersjs/socketio": "^3.2.5",
+    "axios": "^0.18.0",
+    "bluebird": "^3.5.2",
     "compression": "^1.7.3",
     "cors": "^2.8.4",
+    "feathers-memory": "^2.2.0",
+    "feathers-mongodb": "^3.3.0",
+    "feathers-nedb": "^3.1.0",
     "helmet": "^3.13.0",
+    "mongodb": "^3.1.6",
+    "nedb": "^1.8.0",
     "serve-favicon": "^2.5.0",
     "winston": "^3.0.0"
   },
