--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bluebird": "^3.5.2",
+    "bootstrap": "^4.1.3",
     "lodash": "^4.17.11",
     "react": "^16.4.2",
+    "react-bootstrap": "^1.0.0-beta.1",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
