Updated eslint to support object spread

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,10 @@
     "browser": true
   },
   "parserOptions": {
-    "ecmaVersion": 2017
+    "ecmaVersion": 2017,
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
   },
   "extends": ["eslint:recommended", "plugin:import/recommended", "plugin:react/recommended"],
   "rules": {
