--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       context: ../api
     ports:
       - "3030:3030"
+    env_file:
+      - "prod.env"
   mongo:
     image: "mongo:4"
     ports:
