--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,12 +4,14 @@ services:
     image: jasonh815/cardcounterz-api
     build:
       context: ../api
+    restart: always
     ports:
       - "3030:3030"
     env_file:
       - "prod.env"
   mongo:
     image: "mongo:4"
+    restart: always
     ports:
       - "27017:27017"
     volumes:
