updated settings for running backend database locally for testing

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "3030:3030"
     env_file:
-      - "prod.env"
+      - "api.env"
   mongo:
     image: "mongo:4"
     restart: always
@@ -18,5 +18,5 @@ services:
       - "27017:27017"
     volumes:
       - ../api/data/mongo:/data/db
-    command: --auth
+    command: ${MONGO_START_COMMAND}
 
