--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,10 @@
 {
+  "parser": "babel-eslint",
+  "plugins": [
+    "babel"
+  ],
   "env": {
     "es6": true,
-    "node": true,
     "mocha": true,
     "browser": true
   },
