--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bluebird": "^3.5.2",
     "bootstrap": "^4.1.3",
     "lodash": "^4.17.11",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-bootstrap": "^1.0.0-beta.1",
     "react-dom": "^16.4.2",
@@ -22,7 +23,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.6.0",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-react": "^7.11.1"
   }
