--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,9 +8,11 @@ services:
       - mongo
     restart: always
     ports:
-      - "3030:3030"
+      - "80:3030"
     env_file:
       - "api.env"
+    volumes:
+       - ../build:/app/public
   mongo:
     image: "mongo:4"
     restart: always
