--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,8 @@
     "yarn": ">= 0.18.0"
   },
   "scripts": {
-    "test": "yarn run eslint && yarn run mocha",
+    "test.static": "yarn run eslint",
+    "test.dynamic": "yarn run mocha",
     "eslint": "eslint src/. test/. --config .eslintrc.json",
     "dev": "nodemon src/",
     "start": "node src/",
